--- a/nicnbk-ui-angular2/src/app/authentication/view/login.component.html
+++ b/nicnbk-ui-angular2/src/app/authentication/view/login.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container" align="center">
     <div [ngBusy]="busy" class="row">
-        <div class="Absolute-Center is-Responsive">
+        <!--<div class="Absolute-Center is-Responsive">-->
         <!--<div class="col-md-4 col-md-offset-4">-->
             <div *ngIf="errorMsg != null">
                 <span style="color:red">{{errorMsg}}</span>
@@ -10,20 +10,20 @@
             </div>
 
             <form (ngSubmit)="login()">
-                <div class="form-group input-group">
+                <div class="form-group input-group" style="width: 300px">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                     <input class="form-control" type="text" name="username" placeholder="username"
                            [(ngModel)]="user.username"/>
                 </div>
-                <div class="form-group input-group">
+                <div class="form-group input-group" style="width: 300px">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                     <input class="form-control" type="password" name="password" placeholder="password"
                            [(ngModel)]="user.password"/>
                 </div>
-                <div><button type="submit" class="btn btn-def btn-block">Sign In</button></div>
+                <div><button type="submit" class="btn btn-def btn-block" style="width: 300px">Sign In</button></div>
             </form>
             <br/>
             <!--<div class="copyrightText">&copy; 2016 NIC</div>-->
-        </div>
+        <!--</div>-->
     </div>
 </div>
