--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-portfolio.component2.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-portfolio.component2.html
@@ -22,54 +22,34 @@
 
     <div class="row">
         <div class="col-md-2">
-            <select (ngModelChange)="redrawTables()" [(ngModel)]="tableDate" id="tableDate" class="form-control" >
+            <select (ngModelChange)="redraw()" [(ngModel)]="tableDate" id="tableDate" class="form-control" >
                 <option *ngFor="let item of getAllDates()" [value]="item">{{item}}</option>
             </select>
         </div>
+    </div>
+    <div class="row">
         <div class="col-md-12">
-            <div class="col-md-4">
-                <h4>Performance NET Asset Value</h4>
-                <div id="portfolio_value">
+            <div class="col-md-6">
+                <h4>Performance NAV</h4>
+                <div id="portfolio_nav_table">
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <h4>Portfolio Performance</h4>
-                <div id="portfolio_performance">
-                </div>
-            </div>
-            <div class="col-md-4">
-                <h4>Benchmarks Performance</h4>
-                <div id="benchmarks_performance">
+                <div id="portfolio_performance_table">
                 </div>
             </div>
         </div>
     </div>
     <br/>
-    <div class="row">
-        <div class="col-md-2">
-            <select (ngModelChange)="redrawLineChart()" [(ngModel)]="performanceType" id="performanceType" class="form-control">
-                <option *ngFor="let item of getAssetTypes()" [value]="item">{{item}}</option>
-            </select>
-        </div>
-        <div class="col-md-12">
-            <div id="alternative_performance">
-            </div>
-        </div>
-    </div>
     <br/>
     <div class="row">
         <div class="col-md-6">
-            <div id="target_allocation">
+            <div id="target_allocation_chart">
             </div>
         </div>
         <div class="col-md-6">
-            <div id="actual_allocation">
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div id="public_performance">
+            <div id="actual_allocation_chart">
             </div>
         </div>
     </div>
