moved mountions.png to css file

--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -35,15 +35,15 @@
             <!--}-->
         <!--</style>-->
     <style>
-        body {
-            background-image: url("../../public/img/mountains.png");
-            background-repeat: no-repeat;
-            background-position: top;
-            /*background-height: 200px;*/
-            background-size: 100%;
-            background-color: white;
-            background-attachment: fixed;
-        }
+        /*body {*/
+            /*background-image: url("../../public/img/mountains.png");*/
+            /*background-repeat: no-repeat;*/
+            /*background-position: top;*/
+            /*!*background-height: 200px;*!*/
+            /*background-size: 100%;*/
+            /*background-color: white;*/
+            /*background-attachment: fixed;*/
+        /*}*/
     </style>
 </head>
 <body>
