--- a/nicnbk-ui-angular2/public/css/common.css
+++ b/nicnbk-ui-angular2/public/css/common.css
@@ -102,127 +102,140 @@ label {
 }
 
 /*****************************************************************************************************************************/
+
+body {
+    background-image: url(../img/mountains.png);
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: 100%;
+    background-color: white;
+    background-attachment: fixed;
+
+}
+
+
+
 .menu_header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 9;
-    background-color: #fff;
-    box-shadow: 5px 1.66px 6px 0 rgba(103, 103, 103, .1);
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+z-index: 9;
+background-color: #fff;
+box-shadow: 5px 1.66px 6px 0 rgba(103, 103, 103, .1);
 }
 
 .menu_header.-transparent {
-    background: 0 0;
-    box-shadow: none
+background: 0 0;
+box-shadow: none
 }
 
 .menu_header.-transparent .menu_logo {
-    background-color: #fff;
-    width: 110px;
-    height: 155px
+background-color: #fff;
+width: 110px;
+height: 155px
 }
 
 @media (max-width: 991.98px) {
-    .menu_header.-transparent .menu_logo {
-        background-size: auto;
-        position: absolute;
-        left: 50%;
-        -webkit-transform: translateX(-50%);
-        transform: translate(-50%)
-    }
+.menu_header.-transparent .menu_logo {
+    background-size: auto;
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translate(-50%)
+}
 }
 
 .menu_container, .container-fluid {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-    width: 100%
+padding-right: 15px;
+padding-left: 15px;
+margin-right: auto;
+margin-left: auto;
+width: 100%
 }
 
 .btn, .btn-link, .dropdown-item {
-    font-weight: 400
+font-weight: 400
 }
 
 pre {
-    display: block;
-    font-size: 87.5%;
-    color: #212529
+display: block;
+font-size: 87.5%;
+color: #212529
 }
 
 pre code {
-    font-size: inherit;
-    word-break: normal
+font-size: inherit;
+word-break: normal
 }
 
 .pre-scrollable {
-    max-height: 340px;
-    overflow-y: scroll
+max-height: 340px;
+overflow-y: scroll
 }
 
 @media (min-width: 576px) {
-    .menu_container {
-        max-width: 540px
-    }
+.menu_container {
+    max-width: 540px
+}
 }
 
 @media (min-width: 768px) {
-    .menu_container {
-        max-width: 720px
-    }
+.menu_container {
+    max-width: 720px
+}
 }
 
 @media (min-width: 992px) {
-    .menu_container {
-        max-width: 960px
-    }
+.menu_container {
+    max-width: 960px
+}
 }
 
 @media (min-width: 1200px) {
-    .menu_container {
-        max-width: 1140px
-    }
+.menu_container {
+    max-width: 1140px
+}
 }
 
 .menu_header__row, .mission {
-    position: relative
+position: relative
 }
 
 @media (max-width: 991.98px) {
-    .menu_header__logo {
-        left: 72px
-    }
+.menu_header__logo {
+    left: 72px
+}
 }
 
 .menu_header__row {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    height: 72px;
-    margin: 0 -15px
+display: -webkit-box;
+display: -ms-flexbox;
+display: flex;
+-webkit-box-align: center;
+-ms-flex-align: center;
+align-items: center;
+height: 72px;
+margin: 0 -15px
 }
 
 @media (min-width: 992px) {
-    .menu_header__row {
-        height: auto;
-        margin: 0
-    }
+.menu_header__row {
+    height: auto;
+    margin: 0
+}
 }
 
 .menu_header li {
-    border-right: none;
+border-right: none;
 }
 
 .menu_header li a:hover:not(.active) {
-    background-color: #ECDFCF;
+background-color: #ECDFCF;
 }
 
 .menu_header .active {
-    /*background-color: red;*/
+/*background-color: red;*/
 }
 
 .menu_logo {
