Scoring implemented - need to test

--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -130,6 +130,7 @@
                         <li *ngIf="showHedgeFundsEditor()"><a [routerLink]="['/hf/managerProfile/0']">New Manager </a></li>
                         <li role="separator" class="divider"></li>
                         <li *ngIf="showHedgeFundsEditor()"><a [routerLink]="['/hf/screening/']">Screening </a></li>
+                        <li *ngIf="showHedgeFundsEditor()"><a [routerLink]="['/hf/scoring/']">Scoring </a></li>
 
                     </ul>
                 </li>
