--- a/nicnbk-ui-angular2/src/app/lookup/view/lookup.values.component.html
+++ b/nicnbk-ui-angular2/src/app/lookup/view/lookup.values.component.html
@@ -17,6 +17,13 @@
                         <!--<a [routerLink]="['/reporting/NBReporting/lookupValues/CurrencyRates]">Edit</a>-->
                     </td>
                 </tr>
+                <tr>
+                    <td>Benchmarks</td>
+                    <td>
+                        <button class="btn btn-sm btn-primary" [routerLink]="['/lookups/benchmarks']">Edit</button>
+                        <!--<a [routerLink]="['/reporting/NBReporting/lookupValues/CurrencyRates]">Edit</a>-->
+                    </td>
+                </tr>
                 </tbody>
             </table>
         </div>
