Front end with no file upload function

--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-portfolio.component2.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-portfolio.component2.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" [ngBusy]="busy">
     <!--<h4><small>login: user pass: Qwerty123</small></h4>-->
     <!--<div class="row">-->
         <!--<div class="col-md-12">-->
