Scoring done (first iteration)

--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -129,8 +129,8 @@
                         <!--<li><a [routerLink]="['/hf/fundProfile/0']">New Fund </a></li>-->
                         <li *ngIf="showHedgeFundsEditor()"><a [routerLink]="['/hf/managerProfile/0']">New Manager </a></li>
                         <li role="separator" class="divider"></li>
-                        <li *ngIf="showHedgeFundsEditor()"><a [routerLink]="['/hf/screening/']">Screening </a></li>
-                        <li *ngIf="showHedgeFundsEditor()"><a [routerLink]="['/hf/scoring/']">Scoring </a></li>
+                        <li *ngIf="showHedgeFundsEditor()"><a [routerLink]="['/hf/screening/']">Scoring </a></li>
+                        <!--<li *ngIf="showHedgeFundsEditor()"><a [routerLink]="['/hf/scoring/']">Scoring </a></li>-->
 
                     </ul>
                 </li>
@@ -169,8 +169,8 @@
 
 <router-outlet></router-outlet>
 
-<div class="copyrightText">&copy; 2018 National Investment Corporation NBK </div>
-<div class="copyrightText">UNIC v.1.9.0 </div>
+<div class="copyrightText">&copy;National Investment Corporation NBK </div>
+<!--<div class="copyrightText">UNIC v.1.9.0 </div>-->
 <br/>
 </body>
 </html>
