--- a/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.component.html
@@ -8,7 +8,7 @@
                     <span *ngIf="this.breadcrumbParams == null"><a [routerLink]="['/hf/screening']">HF Screenings</a></span>
                 </li>
                 <li><a [routerLink]="['/hf/screening/edit/', screeningId]">Screening</a></li>
-                <li class="active">Filtered Results</li>
+                <li class="active">Filters</li>
             </ol>
         </div>
     </div>
