--- a/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.edit.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.edit.component.html
@@ -10,9 +10,9 @@
                     <a [routerLink]="['/hf/screening/edit/', screeningId]">Screening</a>
                 </li>
                 <li>
-                    <a [routerLink]="['/hf/screening/filteredResults/', screeningId]">Filtered Results</a>
+                    <a [routerLink]="['/hf/screening/filteredResults/', screeningId]">Filters</a>
                 </li>
-                <li class="active">Filtered Results Edit</li>
+                <li class="active">Filter Edit</li>
             </ol>
         </div>
     </div>
@@ -85,7 +85,7 @@
         </form>
 
         <div>
-            <button type="submit" class="btn btn-primary pull-right" [disabled]="!paramsForm.form.valid" (click)="applyFilters()">APPLY</button>
+            <button type="submit" *ngIf="filteredResult != null && filteredResult.id > 0" class="btn btn-primary pull-right" [disabled]="!paramsForm.form.valid" (click)="applyFilters()">APPLY</button>
         </div>
         <br/>
     </div>
@@ -134,8 +134,8 @@
 
                     </div>
 
-                    <div class="row" *ngIf="filteredResult.addedFunds != null">
-                        <h4>Added Funds</h4>
+                    <h4>Added Funds</h4>
+                    <div class="row" *ngIf="filteredResult.addedFunds != null && filteredResult.addedFunds.length > 0">
                         <table class="table table-hover small">
                             <thead>
                             <tr>
@@ -170,18 +170,21 @@
                             </tbody>
                         </table>
                     </div>
+                    <span *ngIf="filteredResult.addedFunds == null || filteredResult.addedFunds.length == 0"><i>No funds added</i></span>
 
-                    <div class="row" *ngIf="filteredResult.excludedFunds != null">
-                        <h4>Excluded Funds</h4>
+                    <h4>Excluded Funds</h4>
+                    <div class="row" *ngIf="filteredResult.excludedFunds != null && filteredResult.excludedFunds.length > 0">
+
                         <table class="table table-hover small">
                             <thead>
                             <tr>
                                 <th width="10%">FUND ID</th>
-                                <th width="20%">FUND NAME</th>
-                                <th width="20%">INVESTMENT MANAGER</th>
-                                <th width="20%">MAIN STRATEGY</th>
-                                <th width="15%">FUND AUM, $</th>
+                                <th width="10%">FUND NAME</th>
+                                <th width="10%">INVESTMENT MANAGER</th>
+                                <th width="10%">MAIN STRATEGY</th>
+                                <th width="10%">FUND AUM, $</th>
                                 <th width="10%">MANAGER AUM, $</th>
+                                <th width="35%">COMMENT</th>
                                 <th width="5%">&nbsp;</th>
 
                             </tr>
@@ -195,18 +198,18 @@
                                 <td>{{fund.mainStrategy}}</td>
                                 <td>{{getAmountShort(fund.fundAUM)}}</td>
                                 <td>{{getAmountShort(fund.managerAUM)}}</td>
-                                <td> <span (click)="editFund(fund)" data-toggle="modal" data-target="#fundEditModal">
-                                            <span class="glyphicon glyphicon-pencil"></span>
-                                            </span>
-                                    &nbsp;
-                                        <span (click)="includeFund(fund)">
+                                <td>{{fund.excludeComment}}</td>
+                                <td>
+                                    <span (click)="includeFund(fund)">
                                             <span class="glyphicon glyphicon-plus"></span>
-                                            </span>
+                                        </span>
                                 </td>
                             </tr>
                             </tbody>
                         </table>
                     </div>
+                    <span *ngIf="filteredResult.excludedFunds == null || filteredResult.excludedFunds.length == 0"><i>No excluded funds</i></span>
+
                 </div>
                 <div id="unqualified" class="tab-pane fade">
                     <div class="row withpadding">
@@ -269,6 +272,10 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row withpadding" *ngIf="fundListType == 1">
+                        <button class="btn btn-primary pull-right" (click)="exportFundList()">Export</button>
+                        <span class="pull-right">&nbsp;</span>
+                    </div>
                     <div class="row withpadding">
                         <div *ngIf="filteredFundList != null">
                             <br/>
@@ -316,7 +323,7 @@
                                 <tr *ngFor = "let fund of filteredFundList; let i=index" id="{{fund.fundId}}">
                                     <td>{{i + 1}}</td>
                                     <td>{{fund.fundId}}</td>
-                                    <td>{{fund.fundName}} <span *ngIf="fund.added">*</span></td>
+                                    <td><span [style.text-decoration]="fund.excluded ? 'line-through' : ''">{{fund.fundName}}</span> <span *ngIf="fund.added">*</span></td>
                                     <td>{{fund.investmentManager}}</td>
                                     <td>{{fund.mainStrategy}}</td>
                                     <td>{{fund.annualizedReturn | percent:'1.2-2'}}</td>
@@ -325,7 +332,7 @@
                                     <td>{{fund.cfVar| percent:'1.2-2'}}</td>
                                     <td>{{fund.alpha| percent:'1.2-2'}}</td>
                                     <td>{{fund.omega| number:'1.2-2'}}</td>
-                                    <td style="background-color: #f9eaea">{{fund.totalScore}}</td>
+                                    <td style="background-color: #f9eaea">{{fund.totalScore| number:'1.2-2'}}</td>
                                     <td align="center">
                                         <span *ngIf="fund.fundAUM != null">
                                             <span [style.text-decoration]="fund.editedFundAUM != null ? 'line-through' : ''" data-toggle="tooltip"
@@ -415,8 +422,8 @@
                                     </span>
                                 </td>
                                 <td>
-                                    <span (click)="excludeFund(fund)" style="color: black">
-                                            <span class="glyphicon glyphicon-trash"></span>
+                                    <span style="color: black" data-toggle="modal" (click)="openExcludeFund(fund)" data-target="#excludeFundModal">
+                                            <span class="glyphicon glyphicon-remove"></span>
                                     </span>
                                 </td>
 <!--                                    <td *ngIf="showParameterMatching" style="background-color: #2e6da4">+</td>
@@ -449,6 +456,47 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="excludeFundModal" role="dialog" tabindex="-1">
+        <div class="modal-dialog" style=" min-height: 100px; max-height:85%;  margin-top: 100px; margin-bottom:50px; width:75%;">
+            <div class="modal-content"  *ngIf="selectedFund != null">
+                <div [ngBusy]="busyModal"  class="modal-body">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="alert alert-danger" *ngIf="excludeFundModalErrorMessage != null"><span>{{excludeFundModalErrorMessage}}</span>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="alert alert-info" *ngIf="excludeFundModalSuccessMessage != null"><span>{{excludeFundModalSuccessMessage}}</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md=10">{{selectedFund.fundName}}</div>
+                    </div>
+                    <br/>
+                    <br/>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="col-md-2">
+                                <label>Comment</label>
+                            </div>
+                            <div class="col-md-10">
+                                <input class="col-md-10 form-control" placeholder="Comment..." [(ngModel)]="selectedFund.excludeComment">
+                            </div>
+                        </div>
+                    </div>
+                    <br/>
+                    <div class="row">
+                        <button class="btn btn-success pull-right"(click)="excludeFund()">Exclude</button>
+                    </div>
+                    <button class="btn btn-default pull-left" style="display:none;" id="closeFundExcludeModalBtn" (click)="closeFundExcludeModal()" data-dismiss="modal">CLOSE</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
     <!--<div [ngBusy]="busyStats" class="modal fade" id="insideModal" role="dialog" tabindex="-1">-->
         <!--<div class="modal-dialog" style="min-height: 100px; margin-top: 20%; width:75%;">-->
